--- a/Application/Student/View/Report/edit.html
+++ b/Application/Student/View/Report/edit.html
@@ -1,70 +1,4 @@
-<include file="Base/header" />
-<body class="full-height">
-<!-------------------------------------- 头部开始 -------------------------------------->
-<header>
-    <div class="container">
-
-    </div>
-</header>
-<nav class="navi">
-    <div class="hd">
-        <div class="logo">
-            <p><a href=""><img src="__PUBLIC__/Student/img/logo.png" alt=""></a></p>
-        </div>
-    </div>
-    <div class="ct">
-        <div class="ht15"></div>
-        <div class="list">
-            <ul>
-                <li>
-                    <div class="i on">
-                        <a href="">
-                            <p><i class="ico1"></i>
-                                实习报告
-                            </p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="i">
-                        <a href="">
-                            <p><i class="ico2"></i>
-                                我的申请
-                            </p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="i">
-                        <a href="">
-                            <p><i class="ico3"></i>
-                                通讯录
-                            </p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="i">
-                        <a href="">
-                            <p><i class="ico4"></i>
-                                消息管理
-                            </p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="i">
-                        <a href="">
-                            <p><i class="ico5"></i>
-                                我的成绩
-                            </p>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<include file="Base/header"/>
 <!-------------------------------------- 头部结束 -------------------------------------->
 <!-------------------------------------- 内容开始 -------------------------------------->
 <main>
@@ -73,19 +7,19 @@
             <div class="pull-right">
                 <div class="user">
                     <p><img src="__PUBLIC__/Student/img/avatar1.jpg" alt="">
-                        <a href="">董嘉耀</a>
+                        <a href=''><?php echo getLoginUsername();?></a>
                         <i></i>
                     </p>
                     <div class="ex">
                         <p><a href="">个人信息</a></p>
                         <p><a href="">修改密码</a></p>
-                        <p><a href="">退出</a></p>
+                        <p><a href="/index.php/student/login/logout">退出</a></p>
                     </div>
                 </div>
             </div>
             <div class="tabs">
                 <ul>
-                    <li><a href="" class="on">周报</a></li>
+                    <li><a href="/index.php?m=student&c=report" class="on">周报</a></li>
                     <li><a href="">月报</a></li>
                     <li><a href="">实习总结</a></li>
                 </ul>
@@ -94,10 +28,10 @@
     </div>
     <div class="ui-path">
         <p>
-            <a href="" class="home"></a>
-            <a href="">实习报告</a>
+            <a href="/index.php?m=student&c=report" class="home"></a>
+            <a href="/index.php?m=student&c=report">实习报告</a>
             >
-            <a href="" class="on">新增实习报告</a>
+            <a href="" class="on">编辑实习报告</a>
         </p>
     </div>
     <div class="ui-main">
@@ -106,18 +40,6 @@
             <div class="ui-form style2">
                 <form class="form-horizontal" id="yfycms-form">
                     <input type="hidden" name="id" value="{$data.id}"/>
-                    <div class="form-group">
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">实习课程</label>
-                        </div>
-                        <div class="col-sm-10">
-                            <select name="course" class="select" style="width: 210px;">
-                                <option value="">请选择您的实习课程</option>
-                                <option value="数学" <if condition="数学 eq $data['course']"> selected="selected"</if>>数学</option>
-                                <option value="英语"<if condition="英语 eq $data['course']"> selected="selected"</if>>英语</option>
-                            </select>
-                        </div>
-                    </div>
                     <div class="form-group">
                         <div class="col-sm-2">
                             <label for="" class="control-label">标题</label>
@@ -145,16 +67,6 @@
                                 <input id="file_upload"  type="file" multiple="true" >
                                 <img style="display: none" id="upload_org_code_img" src="{$data.pic}" width="150" height="150">
                                 <input id="file_upload_image" name="pic" type="hidden" multiple="true" value="{$data.pic}">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">下周计划</label>
-                        </div>
-                        <div class="col-sm-10">
-                            <div class="textarea"><label for="">0/2000</label>
-                                <textarea class="form-control" name="nexplan"  placeholder="请输入下周计划">{$data.nexplan}</textarea>
                             </div>
                         </div>
                     </div>
