--- a/Application/Student/View/Report/index.html
+++ b/Application/Student/View/Report/index.html
@@ -99,7 +99,7 @@
               </div>
             </div>
             <div class="ct">
-              <table>
+              <table class="yfycms-table">
                 <tbody>
                   <tr>
                     <td>&nbsp;</td>
@@ -122,8 +122,8 @@
                       <td>{$vo.status|status}</td>
                       <td>
                         <a href="javascript:void(0);">查看</a>
-                        <a href="javascript:void(0);">编辑</a>
-                        <a href="javascript:void(0);">删除</a>
+                        <a href="javascript:void(0);" id="yfycms-edit" attr-id="{$vo.id}">编辑</a>
+                        <a href="javascript:void(0);" attr-id="{$vo.id}" attr-message="删除" id="yfycms-delete">删除</a>
                       </td>
                     </tr>
                   </volist>      
@@ -164,7 +164,53 @@
   
 </style>
 <script>
-  $(function(){
-    
+  var SCOPE = {
+    'jump_url' : '/index.php?m=student&c=report&a=index',
+    'set_status_url':'/index.php?m=student&c=report&a=del',
+    'edit_url':'/index.php?m=student&c=report&a=edit'
+  };
+
+  $('.yfycms-table #yfycms-delete').on('click',function(){
+    var id = $(this).attr('attr-id');
+    var message=$(this).attr('attr-message');
+    var url = SCOPE.set_status_url;
+    data={};
+    data['id'] = id;
+
+    layer.open({
+      type : 0,
+      title : '是否提交？',
+      btn : ['yes','no'],
+      icon :3,
+      closeBtn : 2,
+      content : '是否确认'+message,
+      scorllbar : true,
+      yes: function(){
+        todelete(url,data);
+      },
+    });
+  });
+
+  function todelete(){
+    var url = SCOPE.set_status_url;
+    //ajax的异步操作，交互性好
+    $.post(
+            url,data,function(s){
+              if(s.status == 1){
+                return dialog.success('删除成功','');
+              }else{
+                return dialog.error('删除失败');
+              }
+            },"JSON");
+  }
+
+  /**
+   * 编辑模型
+   */
+  $('.yfycms-table #yfycms-edit').on('click',function(){
+    var id = $(this).attr('attr-id');
+    var url = SCOPE.edit_url+'&id='+id;
+    window.location.href=url;
   });
 </script>
+
