学生端实习申请模块的优化

--- a/Application/Student/View/Apply/change.html
+++ b/Application/Student/View/Apply/change.html
@@ -19,8 +19,8 @@
             </div>
             <div class="tabs">
                 <ul>
-                    <li><a href="/index.php?m=student&c=apply" class="on">实习申请</a></li>
-                    <li><a href="/index.php?m=student&c=apply&a=change">实习变更</a></li>
+                    <li><a href="/index.php?m=student&c=apply">实习申请</a></li>
+                    <li><a href="/index.php?m=student&c=apply&a=change" class="on">实习变更</a></li>
                     <li><a href="/index.php?m=student&c=apply&a=leave">请假申请</a></li>
                 </ul>
             </div>
@@ -28,16 +28,12 @@
     </div>
     <div class="ht15"></div>
     <div class="ui-main">
+
         <div class="container">
             <div class="ht10"></div>
-            <div class="ui-filter">
-
 
             <div class="ht30"></div>
             <div class="ui-table">
-                <div class="hd">
-
-                </div>
                 <div class="ct">
                     <table>
                         <tbody>
@@ -51,20 +47,18 @@
                             <td><b>评审结果</b></td>
                             <td><b>操作</b></td>
                         </tr>
-
-                            <tr>
-                                <td><a href="" class="cbox"></a></td>
-                                <td>{$data['studentno']}</td>
-                                <td>{$data['name']}</td>
-                                <td>{$data['classname']}</td>
-                                <td>{$data['starttime']}</td>
-                                <td>{$data['teacher']}</td>
-                                <td>{$data['status']|getReportStatus}</td>
-                                <td>
-                                    <a href="">查看</a> <a href="">删除</a>
-                                </td>
-                            </tr>
-
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>{$data['studentno']}</td>
+                            <td>{$data['name']}</td>
+                            <td>{$data['classname']}</td>
+                            <td>{$data['applytime']}</td>
+                            <td>{$data['teacher']}</td>
+                            <td>{$data['status']|getChangeStatus}</td>
+                            <td>
+                                <a href="">查看</a> <a href="">删除</a>
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
@@ -80,23 +74,6 @@
     </div>
 </footer>
 <!-------------------------------------- 尾部开始 -------------------------------------->
-<link rel="stylesheet" type="text/css" href="css/bootstrap-datetimepicker.min.css">
-<script type="text/javascript" src="js/bootstrap-datetimepicker.min.js"></script>
-<script type="text/javascript" src="js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
-<script>
-    $(function(){
-        $('.dtp').datetimepicker({
-            language: 'zh-CN',
-            weekStart: 1,
-            todayBtn:  1,
-            autoclose: 1,
-            todayHighlight: 1,
-            startView: 2,
-            forceParse: 0,
-            showMeridian: 1
-        });
-    });
-</script>
 </body>
 </html>
 <style>
