--- a/Application/Student/View/Apply/leave.html
+++ b/Application/Student/View/Apply/leave.html
@@ -19,9 +19,9 @@
             </div>
             <div class="tabs">
                 <ul>
-                    <li><a href="">实习申请</a></li>
-                    <li><a href="">实习变更</a></li>
-                    <li><a href="" class="on">请假申请</a></li>
+                    <li><a href="/index.php?m=student&c=apply">实习申请</a></li>
+                    <li><a href="/index.php?m=student&c=apply&a=change">实习变更</a></li>
+                    <li><a href="/index.php?m=student&c=apply&a=leave" class="on">请假申请</a></li>
                 </ul>
             </div>
         </div>
