--- a/Application/Student/View/Apply/add.html
+++ b/Application/Student/View/Apply/add.html
@@ -1,4 +1,4 @@
-<include file="Base/header"/>
+<include file="Base/header" />
 <!-------------------------------------- 头部结束 -------------------------------------->
 <!-------------------------------------- 内容开始 -------------------------------------->
 <main>
@@ -7,7 +7,7 @@
             <div class="pull-right">
                 <div class="user">
                     <p><img src="img/avatar1.jpg" alt="">
-                        <a href=""><?php echo getLoginUsername() ?></a>
+                        <a href="">董嘉耀</a>
                         <i></i>
                     </p>
                     <div class="ex">
@@ -19,9 +19,9 @@
             </div>
             <div class="tabs">
                 <ul>
-                    <li><a href="/index.php?m=student&c=apply">实习申请</a></li>
-                    <li><a href="/index.php?m=student&c=apply&a=change" class="on">实习变更</a></li>
-                    <li><a href="/index.php?m=student&c=apply&a=leave">请假申请</a></li>
+                    <li><a href="" class="on">实习申请</a></li>
+                    <li><a href="">实习变更</a></li>
+                    <li><a href="">请假申请</a></li>
                 </ul>
             </div>
         </div>
@@ -35,31 +35,30 @@
                 <form class="form-horizontal" id="yfycms-form">
                     <div class="form-group">
                         <div class="col-sm-2">
-                            <label for="" class="control-label">变更类型</label>
+                            <label for="" class="control-label">企业名称</label>
                         </div>
                         <div class="col-sm-4">
-                            <div class="select" style="width: 210px;">
-                                <input name="type" type="hidden" id="type"/>
-                                <p><a href="javascript:void(0)">请选择变更类型</a></p>
+                            <select class="select" name="cname" class="select" style="width: 210px;">
                                 <div class="ex">
-                                    <p><a href="javascript:void(0)" id="corporation">单位</a></p>
-                                    <p><a href="javascript:void(0)" id="job">岗位</a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">请选择企业名称</label>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="select" style="width: 210px;">
-                                <p><a href="">请选择企业名称</a></p>
-                                <input type="hidden" value="" name="cname" id="cname"/>
-                                <div class="ex">
+                                    <option value="">请选择企业名称</option>
                                     <volist name="corporation" id="vo">
-                                    <p><a href="javascript:void();" id="{$vo.id}">{$vo.name}</a></p>
+                                    <option value="{$vo.name}">{$vo.name}</option>
                                     </volist>
                                 </div>
-                            </div>
+                            </select>
+                        </div>
+                        <div class="col-sm-2">
+                            <label for="" class="control-label">所在地址</label>
+                        </div>
+                        <div class="col-sm-4">
+                            <select class="select"  class="select" style="width: 210px;">
+                                <div class="ex">
+                                    <option value="">请选择企业名地址</option>
+                                    <volist name="corporation" id="vo">
+                                        <option value="{$vo.address}">{$vo.address}</option>
+                                    </volist>
+                                </div>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
@@ -68,11 +67,11 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="text">
-                                <input type="hidden" value="0" id="box" name="profession"/>
                                 <p>
-                                    <a href="" id="box1" class="rbox on"><i></i>对口</a>
+                                    <a href="javascript:void();" id="box1" class="rbox on"><i></i>对口</a>
+                                    <input type="hidden" value="" id="box" name="profession"/>
                                     <span class="wh50"></span>
-                                    <a href="" id="box2" class="rbox"><i></i>不对口</a>
+                                    <a href="javascript:void();" id="box2" class="rbox"><i></i>不对口</a>
                                 </p>
                             </div>
                         </div>
@@ -81,9 +80,9 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="text">
-                                <input type="hidden" value="0" id="buy" name="insurance"/>
                                 <p>
                                     <a href="" id="buy1" class="rbox on"><i></i>已购买</a>
+                                    <input type="hidden" value="" id="buy" name="insurance"/>
                                     <span class="wh50"></span>
                                     <a href="" id="buy2" class="rbox"><i></i>未购买</a>
                                 </p>
@@ -92,18 +91,16 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-2">
-                            <label for="" class="control-label">实习岗位</label>
+                            <label for="" class="control-label">职务</label>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" name="position" class="form-control" id="" style="width: 210px;" placeholder="请输入实习岗位名称">
+                            <input type="text" name="position" class="form-control" id="" style="width: 210px;" placeholder="请输入工作职务">
                         </div>
                         <div class="col-sm-2">
-                            <label for="" class="control-label">所在地址</label>
+                            <label for="" class="control-label">企业联系人</label>
                         </div>
                         <div class="col-sm-4">
-                            <div class="col-sm-4">
-                                <input type="text" name="address" class="form-control" id="" style="width: 210px;" placeholder="请输入所在地址">
-                            </div>
+                            <input type="text" class="form-control" id="" style="width: 210px;" placeholder="请输入企业联系人">
                         </div>
                     </div>
                     <div class="form-group">
@@ -111,46 +108,41 @@
                             <label for="" class="control-label">联系电话</label>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" name="phone" class="form-control" id="" style="width: 210px;" placeholder="请输入联系电话">
+                            <input type="text" class="form-control" name="phone" id="" style="width: 210px;" placeholder="请输入联系电话">
                         </div>
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">企业老师</label>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="col-sm-4">
-                                <input type="text" name="guide" class="form-control" id="" style="width: 210px;" placeholder="请输入企业老师">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
                         <div class="col-sm-2">
                             <label for="" class="control-label">详细地址</label>
                         </div>
-                        <div class="col-sm-10">
-                            <input type="text" name="detailaddress" class="form-control" style="width: 93%;" id="" placeholder="" value="">
+                        <div class="col-sm-4">
+                            <div class="select" style="width: 210px;">
+                                <input type="text" class="form-control" name="address" id="" style="width: 210px;" placeholder="请输入详细地址">
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-2">
-                            <label for="" class="control-label">变更原因</label>
+                            <label for="" class="control-label">开始日期</label>
                         </div>
-                        <div class="col-sm-10">
-                            <div class="textarea" style="width: 93%;"><label for="">0/2000</label>
-                                <textarea class="form-control" name="reason" placeholder="请输入详细的变更原因"></textarea>
-                            </div>
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control dtp" name="starttime" id="" style="width: 210px;" placeholder="例XXXX-XX-XX" value="2016-12-1">
                         </div>
-                    </div>
-                    <div class="ht15"></div>
-                    <div class="form-group">
-                        <p class="text-center">
-                            <a href="javascript:void();" id="yfycms-button-submit" class="bt-btn1 style1">提交</a>
-                            <span class="wh40"></span>
-                            <a href="javascript:void();" class="bt-btn1 style2">取消</a>
-                        </p>
+                        <div class="col-sm-2">
+                            <label for="" class="control-label">结束日期</label>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control dtp" name="endtime" id="" style="width: 210px;" placeholder="例XXXX-XX-XX">
+                        </div>
                     </div>
                 </form>
+                <div class="ht90"></div>
+                <p class="text-center">
+                    <a href="javascript:void();" id="yfycms-button-submit" class="bt-btn1 style1">提交</a>
+                    <span class="wh40"></span>
+                    <a href="" class="bt-btn1 style2">取消</a>
+                </p>
             </div>
         </div>
+    </div>
     </div>
 </main>
 <!-------------------------------------- 内容结束 -------------------------------------->
@@ -161,22 +153,29 @@
     </div>
 </footer>
 <!-------------------------------------- 尾部开始 -------------------------------------->
+<link rel="stylesheet" type="text/css" href="/Public/Student/css/bootstrap-datetimepicker.min.css">
+<script type="text/javascript" src="/Public/Student/js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="/Public/Student/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
+<script>
+    $(function(){
+        $('.dtp').datetimepicker({
+            language: 'zh-CN',
+            weekStart: 1,
+            todayBtn:  1,
+            autoclose: 1,
+            todayHighlight: 1,
+            startView: 2,
+            forceParse: 0,
+            showMeridian: 1
+        });
+    });
+</script>
 </body>
 </html>
 <style>
 
 </style>
 <script>
-    $("#job").click(function(){
-        window.location.href='/index.php/student/Apply/changeJob';
-    });
-    $("#corporation").click(function(){
-        $("#type").val(0);
-    });
-    $("#{$vo.id}").click(function(){
-        $("#cname").val('{$vo.name}');
-    });
-
     $("#box1").click(function(){
         $("#box").val('0');
     });
@@ -192,9 +191,10 @@
     $("#buy2").click(function(){
         $("#buy").val('1');
     });
+
     var SCOPE = {
-        'save_url' : '/index.php?m=student&c=apply&a=changeCorporation',
-        'jump_url' : '/index.php?m=student&c=apply&a=change',
+        'save_url' : '/index.php?m=student&c=apply&a=add',
+        'jump_url' : '/index.php?m=student&c=report&a=index',
     };
     $("#yfycms-button-submit").click(function(){
         var data=$("#yfycms-form").serializeArray();
