--- a/Application/Student/View/Apply/leave.html
+++ b/Application/Student/View/Apply/leave.html
@@ -1,4 +1,4 @@
-<include file="Base/header" />
+<include file="Base/header"/>
 <!-------------------------------------- 头部结束 -------------------------------------->
 <!-------------------------------------- 内容开始 -------------------------------------->
 <main>
@@ -28,58 +28,46 @@
     </div>
     <div class="ht15"></div>
     <div class="ui-main">
-
         <div class="container">
             <div class="ht10"></div>
-            <div class="ui-form style2">
-                <form class="form-horizontal" id="yfycms-form">
-                    <div class="form-group">
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">请假原因</label>
-                        </div>
-                        <div class="col-sm-10">
-                            <div class="textarea" style="width: 93%;"><label for="">0/2000</label>
-                                <textarea class="form-control" name="content" placeholder="请输入详细的请假原因"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">紧急联系人</label>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="text" class="form-control dtp" name="emegencyconcat" id="" style="width: 210px;" placeholder="紧急联系人" value="">
-                        </div>
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">手机号码</label>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="text" class="form-control dtp" name="phone" id="" style="width: 210px;" placeholder="请输入手机号码" value="">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">开始日期</label>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="text" class="form-control dtp" name="applytime" id="" style="width: 210px;" placeholder="例XXXX-XX-XX" value="2016-12-1">
-                        </div>
-                        <div class="col-sm-2">
-                            <label for="" class="control-label">结束日期</label>
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="text" class="form-control dtp" name="endtime" id="" style="width: 210px;" placeholder="例XXXX-XX-XX">
-                        </div>
-                    </div>
-                    <div class="ht15"></div>
-                    <div class="form-group">
-                        <p class="text-center">
-                            <a href="javascript:void();" id="yfycms-button-submit" class="bt-btn1 style1">提交</a>
-                            <span class="wh40"></span>
-                            <a href="" class="bt-btn1 style2">取消</a>
+            <div class="ui-table">
+                <div class="hd">
+                    <div class="tool">
+                        <p>
+                            <a href="/index.php?m=student&c=apply&a=addLeave">新增</a>
                         </p>
                     </div>
-                </form>
+                </div>
+                <div class="ct">
+                    <table>
+                        <tbody>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td><b>学号</b></td>
+                            <td><b>提交人</b></td>
+                            <td><b>班级</b></td>
+                            <td><b>提交时间</b></td>
+                            <td><b>审核人</b></td>
+                            <td><b>评审结果</b></td>
+                            <td><b>操作</b></td>
+                        </tr>
+                        <volist name="list" id="vo">
+                            <tr>
+                                <td><a href="" class="cbox"></a></td>
+                                <td>{$vo.studentno}</td>
+                                <td>{$vo.name}</td>
+                                <td>{$vo.classname}</td>
+                                <td>{$vo.applytime}</td>
+                                <td>{$vo.teacher}</td>
+                                <td>{$vo.status|status}</td>
+                                <td>
+                                    <a href="">查看</a> <a href="">删除</a>
+                                </td>
+                            </tr>
+                        </volist>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -92,49 +80,13 @@
     </div>
 </footer>
 <!-------------------------------------- 尾部开始 -------------------------------------->
-<link rel="stylesheet" type="text/css" href="/Public/Student/css/bootstrap-datetimepicker.min.css">
-<script type="text/javascript" src="/Public/Student/js/bootstrap-datetimepicker.min.js"></script>
-<script type="text/javascript" src="/Public/Student/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
-<script>
-    $(function(){
-        $('.dtp').datetimepicker({
-            language: 'zh-CN',
-            weekStart: 1,
-            todayBtn:  1,
-            autoclose: 1,
-            todayHighlight: 1,
-            startView: 2,
-            forceParse: 0,
-            showMeridian: 1
-        });
-    });
-</script>
 </body>
 </html>
 <style>
 
 </style>
 <script>
-    var SCOPE = {
-        'save_url' : '/index.php?m=student&c=apply&a=leave',
-        'jump_url' : '/index.php?m=student&c=report&a=index',
-    };
-    $("#yfycms-button-submit").click(function(){
-        var data=$("#yfycms-form").serializeArray();
-        postData={};
-        $(data).each(function(i){
-            postData[this.name]=this.value;
-        });
-        console.log(postData);
-        url=SCOPE.save_url;
-        jump_url=SCOPE.jump_url;
-        $.post(url,postData,function($result){
-            if($result.status == 1){
-                return dialog.success($result.message,jump_url);
-            }else if($result.status == 0){
-                return dialog.error($result.message);
-            }
-        },"JSON");
+    $(function(){
+
     });
 </script>
-
