学生端消息管理模块的查看功能

--- a/Application/Student/View/Apply/add.html
+++ b/Application/Student/View/Apply/add.html
@@ -194,7 +194,7 @@
 
     var SCOPE = {
         'save_url' : '/index.php?m=student&c=apply&a=add',
-        'jump_url' : '/index.php?m=student&c=report&a=index',
+        'jump_url' : '/index.php?m=student&c=apply&a=index',
     };
     $("#yfycms-button-submit").click(function(){
         var data=$("#yfycms-form").serializeArray();
