学生端请假申请模块的查看和删除功能功能

--- a/Application/Student/View/Apply/add.html
+++ b/Application/Student/View/Apply/add.html
@@ -138,7 +138,7 @@
                 <p class="text-center">
                     <a href="javascript:void();" id="yfycms-button-submit" class="bt-btn1 style1">提交</a>
                     <span class="wh40"></span>
-                    <a href="" class="bt-btn1 style2">取消</a>
+                    <a href="/index.php?m=student&c=apply" class="bt-btn1 style2">取消</a>
                 </p>
             </div>
         </div>
