--- a/Application/Student/View/Report/view.html
+++ b/Application/Student/View/Report/view.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="ui-path">
-        <p><span class="pull-right"><a href="">返回</a></span>
+        <p><span class="pull-right"><a href="/index.php/student/report/index">返回</a></span>
             <a href="" class="home"></a>
             <a href="">实习报告</a>
             >
