--- a/Application/Student/View/Apply/addLeave.html
+++ b/Application/Student/View/Apply/addLeave.html
@@ -54,7 +54,7 @@
                             <label for="" class="control-label">手机号码</label>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" class="form-control" name="phone" id="" style="width: 210px;" placeholder="请输入手机号码" value="">
+                            <input type="text" class="form-control" name="telephone" id="" style="width: 210px;" placeholder="请输入手机号码" value="">
                         </div>
                     </div>
                     <div class="form-group">
@@ -62,7 +62,7 @@
                             <label for="" class="control-label">开始日期</label>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" class="form-control dtp" name="applytime" id="" style="width: 210px;" placeholder="例XXXX-XX-XX" value="">
+                            <input type="text" class="form-control dtp" name="starttime" id="" style="width: 210px;" placeholder="例XXXX-XX-XX" value="">
                         </div>
                         <div class="col-sm-2">
                             <label for="" class="control-label">结束日期</label>
