--- a/Application/Student/View/Report/index.html
+++ b/Application/Student/View/Report/index.html
@@ -122,7 +122,7 @@
                       <td>{$vo.status|status}</td>
                       <td>
                         <a href="javascript:void(0);" attr-id="{$vo.id}" id="yfycms-view">查看</a>
-                        <a href="javascript:void(0);" id="yfycms-edit" attr-id="{$vo.id}">编辑</a>
+                        <a href="javascript:void(0);" <if condition="$vo.status eq 0">id="yfycms-edit"</if> attr-id="{$vo.id}">编辑</a>
                         <a href="javascript:void(0);" attr-id="{$vo.id}" attr-message="删除" id="yfycms-delete">删除</a>
                       </td>
                     </tr>
