--- a/Application/Student/View/Apply/viewChangeCorporation.html
+++ b/Application/Student/View/Apply/viewChangeCorporation.html
@@ -30,11 +30,11 @@
         </div>
     </div>
     <div class="ui-path">
-        <p><span class="pull-right"><a href="/index.php?m=student&c=apply&a=change">返回</a></span>
+        <p><span class="pull-right"><a href="/index.php?m=student&c=apply&a=change" style="font-size: 15px">返回</a></span>
             <a href="" class="home"></a>
-            <a href="/index.php?m=student&c=apply&a=change">实习变更</a>
+            <a href="/index.php?m=student&c=apply&a=change" style="font-size: 15px">实习变更</a>
             &gt;
-            <a href="" class="on">实习变更状态</a>
+            <a href="" class="on" style="font-size: 15px" >实习变更状态</a>
         </p>
     </div>
     <div class="ui-main">
