--- a/Application/Student/View/Apply/viewLeave.html
+++ b/Application/Student/View/Apply/viewLeave.html
@@ -30,11 +30,11 @@
         </div>
     </div>
     <div class="ui-path">
-        <p><span class="pull-right"><a href="/index.php?m=student&c=apply&a=leave">返回</a></span>
+        <p><span class="pull-right"><a href="/index.php?m=student&c=apply&a=leave" style="font-size: 15px">返回</a></span>
             <a href="" class="home"></a>
-            <a href="/index.php?m=student&c=apply&a=leave">请假申请</a>
+            <a href="/index.php?m=student&c=apply&a=leave" style="font-size: 15px">请假申请</a>
             &gt;
-            <a href="" class="on">请假申请状态</a>
+            <a href="" class="on" style="font-size: 15px">请假申请状态</a>
         </p>
     </div>
     <div class="ui-main">
