--- a/Application/Student/View/Notice/cat.html
+++ b/Application/Student/View/Notice/cat.html
@@ -27,11 +27,11 @@
         </div>
     </div>
     <div class="ui-path">
-        <p>
+        <p><span class="pull-right"><a href="/index.php/student/Notice/index" style="font-size: 15px">返回</a></span>
             <a href="" class="home"></a>
-            <a href="/index.php/student/Notice/index">消息管理</a>
+            <a href="/index.php/student/Notice/index" style="font-size: 15px">消息管理</a>
             &gt;
-            <a href="/index.php/student/Notice/index" class="on">公告</a>
+            <a href="/index.php/student/Notice/index" style="font-size: 15px" class="on">公告查看</a>
         </p>
     </div>
     <div class="ui-main">
