--- a/Application/Student/View/Report/add.html
+++ b/Application/Student/View/Report/add.html
@@ -29,9 +29,9 @@
     <div class="ui-path">
         <p>
             <a href="" class="home"></a>
-            <a href="">实习报告</a>
+            <a href=""style="font-size: 15px">实习报告</a>
             >
-            <a href="" class="on">新增实习报告</a>
+            <a href="" class="on"style="font-size: 15px">新增实习报告</a>
         </p>
     </div>
     <div class="ui-main">
