--- a/Application/Student/View/Report/edit.html
+++ b/Application/Student/View/Report/edit.html
@@ -29,9 +29,9 @@
     <div class="ui-path">
         <p>
             <a href="/index.php?m=student&c=report" class="home"></a>
-            <a href="/index.php?m=student&c=report">实习报告</a>
+            <a href="/index.php?m=student&c=report" style="font-size: 15px">实习报告</a>
             >
-            <a href="" class="on">编辑实习报告</a>
+            <a href="" class="on" style="font-size: 15px">编辑实习报告</a>
         </p>
     </div>
     <div class="ui-main">
