--- a/Application/Student/View/Report/view.html
+++ b/Application/Student/View/Report/view.html
@@ -27,11 +27,11 @@
         </div>
     </div>
     <div class="ui-path">
-        <p><span class="pull-right"><a href="/index.php/student/report/index">返回</a></span>
-            <a href="" class="home"></a>
-            <a href="">实习报告</a>
+        <p><span class="pull-right"><a href="/index.php/student/report/index" style="font-size: 15px">返回</a></span>
+            <a href="/index.php/student/report/index" class="home"></a>
+            <a href="/index.php/student/report/index" style="font-size: 15px">实习报告</a>
             >
-            <a href="" class="on">实习状态</a>
+            <a href="" class="on" style="font-size: 15px">实习状态</a>
         </p>
     </div>
     <div class="ui-main">
