--- a/Application/Student/View/Notice/index.html
+++ b/Application/Student/View/Notice/index.html
@@ -33,8 +33,6 @@
                 <div class="hd">
                     <div class="tool">
                         <p>
-                            <a href="">查询</a>
-                            &nbsp;
                             <a href="">删除</a>
                         </p>
                     </div>
@@ -59,7 +57,8 @@
                                 <td>{$vo.name}</td>
                                 <td>所有人</td>
                                 <td>{$vo.pubtime}</td>
-                                <td><a href="javascript:void(0)" attr-id="{$vo.id}" id="yfycms-cat"  class="ul">查看</a></td>
+                                <td><a href="javascript:void(0)" attr-id="{$vo.id}" id="yfycms-cat"  class="ul">查看</a>&nbsp;<a href="">删除</a>
+                                    </td>
                             </tr>
                         </volist>
                         </tbody>
