--- a/Application/Student/View/Apply/viewApply.html
+++ b/Application/Student/View/Apply/viewApply.html
@@ -32,9 +32,9 @@
     <div class="ui-path">
         <p><span class="pull-right"><a href="/index.php/student/apply/index">返回</a></span>
             <a href="" class="home"></a>
-            <a href="/index.php/student/apply/index">实习申请</a>
+            <a href="/index.php/student/apply/index" style="font-size: 15px">实习申请</a>
             &gt;
-            <a href="" class="on">实习申请状态</a>
+            <a href="" class="on" style="font-size: 15px">实习申请状态</a>
         </p>
     </div>
     <div class="ui-main">
